--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,6 @@ services:
       - ./src/:/home/node/app
     expose:
       - "8080"
+    ports: 
+      - "8080:8080"  
     command: "npm start"
